@@ -10,6 +10,7 @@ import org.wordpress.android.fluxc.model.SiteHomepageSettings.ShowOnFront
 import org.wordpress.android.fluxc.model.SiteModel
 import org.wordpress.android.fluxc.model.SiteModel.ORIGIN_WPCOM_REST
 import org.wordpress.android.ui.pages.PageItem.Action.CANCEL_AUTO_UPLOAD
+import org.wordpress.android.ui.pages.PageItem.Action.COPY
 import org.wordpress.android.ui.pages.PageItem.Action.DELETE_PERMANENTLY
 import org.wordpress.android.ui.pages.PageItem.Action.MOVE_TO_DRAFT
 import org.wordpress.android.ui.pages.PageItem.Action.MOVE_TO_TRASH
@@ -40,7 +41,7 @@ class CreatePageListItemActionsUseCaseTest {
     @Test
     fun `Verify DRAFT actions`() {
         // Arrange
-        val expectedActions = setOf(VIEW_PAGE, SET_PARENT, PUBLISH_NOW, MOVE_TO_TRASH)
+        val expectedActions = setOf(VIEW_PAGE, SET_PARENT, PUBLISH_NOW, MOVE_TO_TRASH, COPY)
 
         // Act
         val draftActions = useCase.setupPageActions(DRAFTS, mock(), site, defaultRemoteId)
@@ -68,7 +69,8 @@ class CreatePageListItemActionsUseCaseTest {
                 VIEW_PAGE,
                 SET_PARENT,
                 MOVE_TO_DRAFT,
-                MOVE_TO_TRASH
+                MOVE_TO_TRASH,
+                COPY
         )
 
         // Act
@@ -87,7 +89,8 @@ class CreatePageListItemActionsUseCaseTest {
                 SET_AS_HOMEPAGE,
                 SET_AS_POSTS_PAGE,
                 MOVE_TO_DRAFT,
-                MOVE_TO_TRASH
+                MOVE_TO_TRASH,
+                COPY
         )
         site.showOnFront = ShowOnFront.PAGE.value
         site.setIsWPCom(true)
@@ -108,7 +111,8 @@ class CreatePageListItemActionsUseCaseTest {
                 SET_AS_HOMEPAGE,
                 SET_AS_POSTS_PAGE,
                 MOVE_TO_DRAFT,
-                MOVE_TO_TRASH
+                MOVE_TO_TRASH,
+                COPY
         )
         site.showOnFront = ShowOnFront.PAGE.value
         site.setIsJetpackConnected(true)
@@ -129,7 +133,8 @@ class CreatePageListItemActionsUseCaseTest {
                 SET_PARENT,
                 SET_AS_POSTS_PAGE,
                 MOVE_TO_DRAFT,
-                MOVE_TO_TRASH
+                MOVE_TO_TRASH,
+                COPY
         )
         site.showOnFront = ShowOnFront.PAGE.value
         site.pageOnFront = defaultRemoteId
@@ -150,7 +155,8 @@ class CreatePageListItemActionsUseCaseTest {
                 SET_PARENT,
                 SET_AS_HOMEPAGE,
                 MOVE_TO_DRAFT,
-                MOVE_TO_TRASH
+                MOVE_TO_TRASH,
+                COPY
         )
         site.showOnFront = ShowOnFront.PAGE.value
         site.pageForPosts = defaultRemoteId
@@ -170,7 +176,8 @@ class CreatePageListItemActionsUseCaseTest {
                 VIEW_PAGE,
                 SET_PARENT,
                 MOVE_TO_DRAFT,
-                MOVE_TO_TRASH
+                MOVE_TO_TRASH,
+                COPY
         )
         site.showOnFront = ShowOnFront.PAGE.value
         val remoteId = -1L
@@ -189,7 +196,8 @@ class CreatePageListItemActionsUseCaseTest {
                 VIEW_PAGE,
                 SET_PARENT,
                 MOVE_TO_DRAFT,
-                MOVE_TO_TRASH
+                MOVE_TO_TRASH,
+                COPY
         )
         site.showOnFront = ShowOnFront.PAGE.value
         site.setIsWPCom(false)
