@@ -1,5 +1,7 @@
 16.5
 -----
+* [**] Page List: Adds duplicate page functionality [https://github.com/wordpress-mobile/WordPress-Android/pull/13607]
+
  
 16.4
 -----
